<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/primaryDarkColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".home.HomeActivity"
        tools:showIn="@layout/activity_home">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/intro_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/star_wars_intro"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp"
                app:fontFamily="cursive"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="parent"/>


        <android.support.v7.widget.RecyclerView
                android:id="@+id/films_recyclerView"
                style="@style/film_home_recycler_view_style"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/intro_textView"/>

        <ProgressBar
                android:id="@+id/films_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/films_recyclerView"
                app:layout_constraintBottom_toBottomOf="@+id/films_recyclerView"/>

        <Button
                android:id="@+id/show_all_movies_button"
                android:textColor="@color/primaryTextColor"
                android:text="@string/show_all_movies"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/films_recyclerView"
                tools:text="@string/show_all_movies"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/people_recyclerView"
                style="@style/home_recycler_view_style"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/show_all_movies_button"/>

        <ProgressBar
                android:id="@+id/people_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/people_recyclerView"
                app:layout_constraintBottom_toBottomOf="@+id/people_recyclerView"/>

        <Button
                android:id="@+id/show_all_people_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_all_characters"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/people_recyclerView"
                tools:text="@string/show_all_characters"/>


        <android.support.v7.widget.RecyclerView
                android:id="@+id/planets_recyclerView"
                style="@style/home_recycler_view_style"
                android:layout_height="120dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/show_all_people_button"/>

        <ProgressBar
                android:id="@+id/planet_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/planets_recyclerView"
                app:layout_constraintBottom_toBottomOf="@+id/planets_recyclerView"/>

        <Button
                android:id="@+id/show_all_planets_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/show_all_planets"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/planets_recyclerView"
                tools:text="@string/show_all_planets"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/vehicles_recyclerView"
                style="@style/home_recycler_view_style"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/show_all_planets_button"/>

        <ProgressBar
                android:id="@+id/vehicle_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/vehicles_recyclerView"
                app:layout_constraintBottom_toBottomOf="@+id/vehicles_recyclerView"/>

        <Button
                android:id="@+id/show_all_vehicles_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_all_vehicles"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/vehicles_recyclerView"
                tools:text="@string/show_all_vehicles"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/starships_recyclerView"
                style="@style/home_recycler_view_style"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/show_all_vehicles_button"/>

        <ProgressBar
                android:id="@+id/starship_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/starships_recyclerView"
                app:layout_constraintBottom_toBottomOf="@+id/starships_recyclerView"/>

        <Button
                android:id="@+id/show_all_starships_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_all_starships"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/starships_recyclerView"
                tools:text="@string/show_all_starships"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/species_recyclerView"
                style="@style/home_recycler_view_style"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/show_all_starships_button"/>

        <ProgressBar
                android:id="@+id/species_progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/species_recyclerView"
                app:layout_constraintBottom_toBottomOf="@+id/species_recyclerView"/>

        <Button
                android:id="@+id/show_all_species_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_all_species"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/species_recyclerView"
                tools:text="@string/show_all_species"/>


        <android.support.constraint.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp"/>

        <android.support.constraint.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>