<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.MutableLiveData"/>

        <variable
                name="viewmodel"
                type="com.dani_chuks.andeladeveloper.starwars.home.HomeViewModel"
                />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".home.HomeActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryDarkColor"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".home.HomeActivity"
                tools:showIn="@layout/activity_home">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/intro_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/star_wars_intro"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="24sp"
                        app:fontFamily="cursive"
                        app:layout_constraintEnd_toEndOf="@id/end_guideline"
                        app:layout_constraintStart_toStartOf="@id/start_guideline"
                        app:layout_constraintTop_toTopOf="parent"/>


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/films_recyclerView"
                        style="@style/film_home_recycler_view_style"
                        app:smallAdapterData="@{viewmodel.films}"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/intro_textView"/>

                <ProgressBar
                        android:id="@+id/films_progress_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewmodel.films.getValue().isEmpty()}"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/films_recyclerView"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toTopOf="@id/films_recyclerView"/>

                <Button
                        android:id="@+id/show_all_movies_button"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/show_all_movies"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/films_recyclerView"
                        tools:text="@string/show_all_movies"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/people_recyclerView"
                        style="@style/home_recycler_view_style"
                        app:smallAdapterData="@{viewmodel.people}"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@+id/show_all_movies_button"/>

                <ProgressBar
                        android:id="@+id/people_progress_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewmodel.people.getValue().isEmpty()}"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/people_recyclerView"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toTopOf="@id/people_recyclerView"/>

                <Button
                        android:id="@+id/show_all_people_button"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/show_all_characters"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/people_recyclerView"
                        tools:text="@string/show_all_characters"/>


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/planets_recyclerView"
                        style="@style/home_recycler_view_style"
                        android:layout_height="120dp"
                        app:smallAdapterData="@{viewmodel.planets}"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@+id/show_all_people_button"/>

                <ProgressBar
                        android:id="@+id/planet_progress_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewmodel.planets.getValue().isEmpty()}"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/planets_recyclerView"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toTopOf="@id/planets_recyclerView"/>

                <Button
                        android:id="@+id/show_all_planets_button"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/show_all_planets"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/planets_recyclerView"
                        tools:text="@string/show_all_planets"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/vehicles_recyclerView"
                        style="@style/home_recycler_view_style"
                        app:smallAdapterData="@{viewmodel.vehicles}"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@+id/show_all_planets_button"/>

                <ProgressBar
                        android:id="@+id/vehicle_progress_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewmodel.vehicles.getValue().isEmpty()}"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/vehicles_recyclerView"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toTopOf="@id/vehicles_recyclerView"/>

                <Button
                        android:id="@+id/show_all_vehicles_button"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/show_all_vehicles"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/vehicles_recyclerView"
                        tools:text="@string/show_all_vehicles"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/starships_recyclerView"
                        style="@style/home_recycler_view_style"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@+id/show_all_vehicles_button"
                        app:smallAdapterData="@{viewmodel.starships}"/>

                <ProgressBar
                        android:id="@+id/starship_progress_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewmodel.starships.getValue().isEmpty()}"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/starships_recyclerView"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toTopOf="@id/starships_recyclerView"/>

                <Button
                        android:id="@+id/show_all_starships_button"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/show_all_starships"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/starships_recyclerView"
                        tools:text="@string/show_all_starships"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/species_recyclerView"
                        style="@style/home_recycler_view_style"
                        app:smallAdapterData="@{viewmodel.species}"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@+id/show_all_starships_button"/>

                <ProgressBar
                        android:id="@+id/species_progress_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="@{viewmodel.species.getValue().isEmpty()}"
                        app:layout_constraintBottom_toBottomOf="@+id/species_recyclerView"
                        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                        app:layout_constraintStart_toEndOf="@+id/start_guideline"
                        app:layout_constraintTop_toTopOf="@id/species_recyclerView"/>

                <Button
                        android:id="@+id/show_all_species_button"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/show_all_species"
                        app:layout_constraintStart_toStartOf="@+id/start_guideline"
                        app:layout_constraintTop_toBottomOf="@id/species_recyclerView"
                        tools:text="@string/show_all_species"/>


                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/start_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="8dp"/>

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/end_guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>